--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-PIL
-psycopg2
-boto
-gunicorn
-
-Django==1.4
-django-storages
+Django==1.6.2
+Pillow==2.3.1
+boto==2.27.0
+django-storages==1.1.8
+gunicorn==18.0
+psycopg2==2.5.2
 -e git://github.com/sunlightlabs/sfapp.git#egg=sfapp
